# NeuralNetwork

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: matrix.h  mnist_parser.h  network.h
include/neuralnetwork/: matrix.h
src/: main.cpp  mnist_parser.cpp  network.cpp
